--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 
 .black {
   background-color: #eee;
-  width: 100vw;
-  height: 100vh;
+  width: inherit;
+  height: inherit;
 }
 /* NAV */
 .nav-container {
@@ -71,7 +71,7 @@
   border: 0;
   border-top-left-radius: 18px;
   border-bottom-left-radius: 18px;
-  color: grey;
+  /* color: grey; */
 }
 
 .new-item {
@@ -104,15 +104,15 @@
 
 .wrap {
   display: flex;
-  background-color: #fff;
-  color: grey;
+  /* background-color: #fff; */
+  /* color: grey; */
 
   justify-content: space-between;
 }
 
 .todo-container {
   background-color: #fff;
-  color: grey;
+  /* color: grey; */
   margin: 1em;
   padding: 1.2em;
   font-size: 1.2em;
@@ -207,9 +207,10 @@
   display: flex;
   margin-left: 25vw;
   margin-right: 25vw;
-  height: inherit;
+
   border-radius: 25px;
   flex-direction: column;
+  padding: 30px;
 }
 .close-modal {
   font-size: 2.5em;
@@ -219,7 +220,8 @@
 .modal-title {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
+  margin-bottom: 30px;
+
   font-weight: 100;
 }
 
@@ -230,6 +232,107 @@
 
 .modal-font {
   margin-right: 15px;
+}
+
+/* Todo Details */
+
+#text {
+  width: 46vw;
+  border-radius: 10px;
+  font-size: 20px;
+  color: black;
+}
+
+#deadline-text {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 46vw;
+  border-radius: 10px;
+  font-size: 20px;
+  color: black;
+}
+
+.description-btn {
+  padding: 1.3em;
+  border-radius: 10px;
+  margin-top: 1.2em;
+}
+
+.labels {
+  padding-bottom: 7px;
+  padding-top: 15px;
+}
+
+.priority-label {
+  background-color: grey;
+  /* color: aqua; */
+}
+
+.todo-description {
+  color: gray;
+  padding-top: 5px;
+  font-weight: lighter;
+  font-size: 17px;
+}
+
+.todo-priority {
+  /* color: red; */
+  /* background-color: #ddd;
+  border: none;
+  padding: 7px;
+  border-radius: 7px;
+  margin-top: 20px; */
+}
+
+/* Drop Down Priority Button */
+
+.dropdown {
+  position: relative;
+  /* display: inline-block; */
+}
+
+.dropdown-btn {
+  border-radius: 0.4em;
+  color: #333;
+  padding: 3px 9px;
+  margin-top: 1.4em;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+  width: fit-content;
+  font-size: 0.9em;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content li {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.dropdown-content li:hover {
+  background-color: #ddd;
+}
+
+.dropdown-content {
+  display: block;
+}
+
+.high {
+  background-color: #f6f690;
+}
+.medium {
+  background-color: #ecec21;
+}
+.low {
+  background-color: #52ff52;
 }
 
 /* AUTHENTICATION */
